[project]
name = "bean-sort"
version = "0.1.1"
description = "Naive sorting for Beancount files"
license = "GPL-3.0-or-later"
license-files = ["COPYING"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["beancount"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
bean-sort = "bean_sort:main"

[project.urls]
Homepage = "https://github.com/tesujimath/bean-sort"
Repository = "https://github.com/tesujimath/bean-sort"

[build-system]
requires = ["flit_core>= 3.11"]
build-backend = "flit_core.buildapi"
